--- a/index.ipynb
+++ b/index.ipynb
@@ -271,22 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}"
+       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[1]"
+    "cities[0]"
    ]
   },
   {
