--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")"
+    "las vegas dict(city=\"Las Vegas\", state=\"Nevada\")"
    ]
   },
   {
