--- a/index.ipynb
+++ b/index.ipynb
@@ -478,22 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'city': 'Las Vegas', 'state': 'Nevada'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-fb4b8512bd74>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-fb4b8512bd74>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    las vegas = dict(city=\"Las Vegas\", state=\"Nevada\")\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "las vegas dict(city=\"Las Vegas\", state=\"Nevada\")"
+    "las vegas = dict(city=\"Las Vegas\", state=\"Nevada\")\n",
+    "las vegas"
    ]
   },
   {
