--- a/index.ipynb
+++ b/index.ipynb
@@ -478,21 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-fb4b8512bd74>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-fb4b8512bd74>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    las vegas = dict(city=\"Las Vegas\", state=\"Nevada\")\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'city': 'Las Vegas', 'state': 'Nevada'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "las vegas = dict(city=\"Las Vegas\", state=\"Nevada\")\n",
-    "las vegas"
+    "lasvegas = dict(city=\"Las Vegas\", state=\"Nevada\")\n",
+    "lasvegas"
    ]
   },
   {
